--- a/logging/CAN_UART/.vscode/launch.json
+++ b/logging/CAN_UART/.vscode/launch.json
@@ -14,6 +14,21 @@
         "interface/stlink-v2-1.cfg",
         "target/stm32f4x.cfg"
       ]
+    },
+    {
+      "showDevDebugOutput": true,
+      "cwd": "${workspaceRoot}",
+      "executable": "./build/CAN_UART.elf",
+      "name": "Debug STM32",
+      "request": "launch",
+      "type": "cortex-debug",
+      "servertype": "openocd",
+      "preLaunchTask": "Build STM",
+      "device": "stlink",
+      "configFiles": [
+        "interface/stlink-v2-1.cfg",
+        "target/stm32f4x.cfg"
+      ]
     }
   ]
 }
