--- a/Working Codes/FRONTAL/.vscode/settings.json
+++ b/Working Codes/FRONTAL/.vscode/settings.json
@@ -4,5 +4,6 @@
     "stm32-for-vscode.makePath": "make",
     "stm32-for-vscode.armToolchainPath": "",
     "cortex-debug.armToolchainPath": "",
-    "stm32-for-vscode.openOCDPath": "openocd"
+    "stm32-for-vscode.openOCDPath": "openocd",
+    "C_Cpp.errorSquiggles": "Disabled"
 }
