--- a/Working Codes/FRONTAL/.vscode/settings.json
+++ b/Working Codes/FRONTAL/.vscode/settings.json
@@ -2,8 +2,8 @@
     "stm32-for-vscode.openocdPath": "openocd",
     "cortex-debug.openocdPath": "openocd",
     "stm32-for-vscode.makePath": "make",
-    "stm32-for-vscode.armToolchainPath": "",
-    "cortex-debug.armToolchainPath": "",
+    "stm32-for-vscode.armToolchainPath": "/usr/bin",
+    "cortex-debug.armToolchainPath": "/usr/bin",
     "stm32-for-vscode.openOCDPath": "openocd",
     "C_Cpp.errorSquiggles": "Disabled"
 }
