--- a/Working Codes/PEDALS/.vscode/settings.json
+++ b/Working Codes/PEDALS/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "stm32-for-vscode.openocdPath": "openocd",
-    "cortex-debug.openocdPath": "openocd",
+    "cortex-debug.openocdPath": "/usr/bin/openocd",
     "stm32-for-vscode.makePath": "make",
-    "stm32-for-vscode.armToolchainPath": "",
-    "cortex-debug.armToolchainPath": "",
+    "stm32-for-vscode.armToolchainPath": "/usr/bin",
+    "cortex-debug.armToolchainPath": "/usr/bin",
     "stm32-for-vscode.openOCDPath": "openocd"
 }
