--- a/Working Codes/Chimera-ECU/.vscode/settings.json
+++ b/Working Codes/Chimera-ECU/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "stm32-for-vscode.openOCDPath": "openocd",
     "stm32-for-vscode.makePath": "make",
-    "stm32-for-vscode.armToolchainPath": "",
-    "cortex-debug.armToolchainPath": ""
+    "stm32-for-vscode.armToolchainPath": "/usr/bin",
+    "cortex-debug.armToolchainPath": "/usr/bin",
+    "cortex-debug.openocdPath": "openocd"
 }
