--- a/Working Codes/FRONTAL/.vscode/settings.json
+++ b/Working Codes/FRONTAL/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "stm32-for-vscode.openocdPath": "openocd",
-    "cortex-debug.openocdPath": "openocd",
+    "cortex-debug.openocdPath": "/usr/bin/openocd",
     "stm32-for-vscode.makePath": "make",
     "stm32-for-vscode.armToolchainPath": "/usr/bin",
     "cortex-debug.armToolchainPath": "/usr/bin",
